Ajouts pour le référent : possibilité de modifier ses cours

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -120,7 +120,7 @@
                     </div>
                 {% endif %}
                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
-                    <a class="adminAlertUsersToValidate" href="{{ path('activateSpecialStatus') }}">Des formateurs et Responsables sont en attente d'activation de leur compte.</a>
+                    <a class="adminAlertUsersToValidate" href="{{ path('activateSpecialStatus') }}">Des formateurs, Référents et Responsables sont en attente d'activation de leur compte.</a>
                 {% endif %}
             {% endif %}
             <div class="navbar-header">
