--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -119,6 +119,7 @@
     </script>
 
     {% set hasResponsableMinRights = app.user.hasRole('ROLE_SUPER_ADMIN') or (app.user.statut == 'Responsable' and app.user.confirmedByAdmin) %}
+    {% set hasInscritsRights = app.user.hasRole('ROLE_SUPER_ADMIN') or ((app.user.statut == 'Responsable' or app.user.statut == 'Referent' or app.user.statut == 'Formateur') and app.user.confirmedByAdmin) %}
     {% set hasReferentMinRights = app.user.hasRole('ROLE_SUPER_ADMIN') or (app.user.statut == 'Referent' and app.user.confirmedByAdmin) %}
 
     <div class="container mt-120">
@@ -167,7 +168,7 @@
                             <div class="container mt-0 mb-60">
                                 <div class="row">
                                     <div class="colCoursContent col-sm-8">
-                                        {% if hasResponsableMinRights %}
+                                        {% if hasInscritsRights %}
                                             <div class="course-list" style="margin-top: 0;">
                                                 <div class="course-media text-center mt-10">
                                                     <i class="fa fa-users fa-3" aria-hidden="true"></i>
