--- a/app/Resources/views/cours/adminLibre.html.twig
+++ b/app/Resources/views/cours/adminLibre.html.twig
@@ -12,7 +12,7 @@
 >
 
     <div class="titleBar">Zone libre</div>
-    {% include "cours/adminBtns.html.twig" with {visible: visible}  %}
+    {% include "cours/adminBtns.html.twig" with {visible: visible, isReferent: isReferent}  %}
     <div class="formCol col-md-11">
         <div class="row">
             <div class="col-xs-12 noPadding">
