--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -156,7 +156,7 @@
             $('#form_typeUser').on('change', function () {
                 if ($(this).val() === 'Etudiant') {
                     loadEtudiant();
-                } else if ($(this).val() === 'Formateur' || $(this).val() === 'Responsable' || $(this).val() === 'Referent') {
+                } else if ($(this).val() === 'Formateur' || $(this).val() === 'Responsable') {
                     loadFormateur();
                 } else {
                     loadProfStagiaire();
