--- a/app/Resources/views/calendrier/calendrierPopup.html.twig
+++ b/app/Resources/views/calendrier/calendrierPopup.html.twig
@@ -9,7 +9,7 @@
             {% set
                 canCreateDiscEvents = app.user.hasRole('ROLE_SUPER_ADMIN')
                 or
-                ((app.user.statut == 'Responsable' or app.user.statut == 'Formateur' or app.user.statut == 'Referent') and app.user.confirmedByAdmin)
+                ((app.user.statut == 'Responsable' or app.user.statut == 'Formateur') and app.user.confirmedByAdmin)
             %}
             <div class="modal-body" data-contentModal="devoirDisplay"
                  style="background:#aaa; background-size:cover" data-rights="{% if canCreateDiscEvents %}true{% else %}false{% endif %}">
