--- a/app/Resources/views/documents/docArray.html.twig
+++ b/app/Resources/views/documents/docArray.html.twig
@@ -1,3 +1,8 @@
+<style>
+    .tablesorter td .btn:not(.selColor) {
+        color: #fff;
+    }
+</style>
 <div class="row">
     <div class="col-sm-12">
         <table class="docTable table table-boxed">
