évolution calendrier, Référent, droits particuliers

--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -426,7 +426,7 @@
                                                             <a href="{{ path('itemUsers', {id: valC.id, type:"cours"}) }}"
                                                                class="btn btn-warning btn-sm">Inscrits</a>
                                                         {% endif %}
-                                                        {% if valC.auteur == app.user or app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                                        {% if val.role == 'Referent' or app.user.hasRole('ROLE_SUPER_ADMIN') %}
                                                             <a href="{{ path('itemUsers', {id: valC.id, type:"cours"}) }}"
                                                                class="btnIncrsForReferents btn btn-warning btn-sm">Modifier</a>
                                                         {% endif %}
